--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "^7.5.5",
     "tslib": "^2.3.0",
-    "zone.js": "^0.11.5"
+    "zone.js": "^0.11.5",
+    "apexcharts": "3.35.0",
+    "ng-apexcharts": "1.7.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.1",
