--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "rxjs": "^7.5.5",
     "tslib": "^2.3.0",
     "zone.js": "^0.11.5",
-    "apexcharts": "3.35.0",
-    "ng-apexcharts": "1.7.1"
+    "apexcharts": "^3.35.0",
+    "ng-apexcharts": "^1.7.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.1",
@@ -37,7 +37,7 @@
     "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "^2.2.0",
     "karma-jasmine": "^5.0.0",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "typescript": "~4.5.5"
   }
 }
